<?xml version="1.0"?>
<package format="2">
  <name>gym_franka_server</name>
  <version>0.0.1</version>
  <description>Server node for Franka gym environment</description>

  <maintainer email="ruihan.zhao@utexas.edu">Ruihan Zhao</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/xbox_controller</url> -->

  <author email="ruihan.zhao@utexas.edu">Ruihan Zhao</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>franka_hw</depend>
  <depend>franka_gripper</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <export>
    <controller_interface plugin="${prefix}/gym_franka_controllers_plugin.xml" />
  </export>

</package>
